--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fullpage/angular-fullpage": "^0.0.16",
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.0.2",
