--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -105,7 +106,8 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/fullpage.js/dist/fullpage.min.js"
+              "node_modules/fullpage.js/dist/fullpage.min.js",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ]
           }
         }
