--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fullpage/angular-fullpage": "^0.0.16",
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.0.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ng2-pdf-viewer": "^7.0.1",
     "ngx-fullpage": "^5.1.0",
