--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ng2-pdf-viewer": "^7.0.1",
     "ngx-fullpage": "^5.1.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.4",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
